--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StopWatch</title>
+    <title>Stop Watch</title>
 
     <link rel="stylesheet" href="style.css">
-    <script src="main.js"></script>
 </head>
 <body>
     <div class="wrapper">
@@ -26,8 +25,9 @@
             <input type="button" value="Reset" class="buttons" id="button-reset">
         </section>
 
-        <footer><i>©STOPWATCH PROJECT</i></footer>
+        <footer><i>©feito por Pedro Parente</i></footer>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
 
